--- a/runapp.conf
+++ b/runapp.conf
@@ -1,8 +1,6 @@
-{
-  appname => 'webcsv',
-  appcall => 'webcsv:app',
-  appuser => 'ray',
-  appgroup => 'staff',
-  workers => '2',
-  port => '8002'
-}
+appname  = webcsv
+appcall  = webcsv:app
+appuser  = ray
+appgroup = staff
+workers  = 2
+port     = 8002
